Fixes Issues with Heroku

--- a/leaderboard/templates/home.html
+++ b/leaderboard/templates/home.html
@@ -5,11 +5,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>PongBoard</title>
+        <title>Converge Technologies PongBoard</title>
     </head>
 
     <body>
-        <h1>PongBoard</h1>
+        <h1>Converge Technologies PongBoard</h1>
 
         {% if user.is_authenticated %}
             <a id='logout-link' href="{% url 'logout' %}">Logout</a>
