--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,30 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>PongBoard Login</title>
-    </head>
+{% extends "base.html" %}
 
-    <body>
-        {% if form.errors %}
-            <p>Your username and password didn't match. Please try again.</p>
-        {% endif %}
-        
-        <form id="login-form" method="post" action="{% url 'login' %}">
-            {% csrf_token %}
-            
-            <div>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
+
+{% block title %} 
+Converge PongBoard
+{% endblock %}
+
+{% block content %}
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+    <section class="vh-100">
+        <div class="container-fluid h-custom">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-md-9 col-lg-6 col-xl-5">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid"
+                alt="Sample image">
             </div>
-            <div>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
+            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+              <form id="login-form" method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+                  <p class="lead fw-normal mb-0 me-3">Sign in</p>
+                </div>
+                <br>
+                <!-- Email input -->
+                <div class="form-outline mb-4">                  
+                  <label class="form-label" for="form3Example3">{{ form.username.label_tag }}</label>
+                  {{ form.username }}
+                </div>
+      
+                <!-- Password input -->
+                <div class="form-outline mb-3">
+                    <label class="form-label" for="form3Example4">{{ form.password.label_tag }}</label>
+                    {{ form.password }}
+                  
+                </div>
+      
+                <div class="d-flex justify-content-between align-items-center">
+                </div>
+                <div class="text-center text-lg-start mt-4 pt-2">
+                    <button type="submit" class="btn btn-primary btn-lg"
+                      style="padding-left: 2.5rem; padding-right: 2.5rem;" value="login">Login</button>
+                  </div>      
+              </form>
             </div>
-            
-            <div>
-                <input type="submit" value="login" />
-            </div>
-        </form>
-    </body>
+          </div>
+        </div>
+        <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+            :)
+        </div>
+      </section>
+{% endblock %}
