--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -8,5 +8,5 @@ Converge PongBoard
 {% block content %}
     <p>Logged out!</p>  
 
-    <a href="{% url 'login'%}">Click here to login again.</a>
+    <a href="{% url 'home'%}">Return to main page</a>
 {% endblock %}
