--- a/pongboard/templates/base.html
+++ b/pongboard/templates/base.html
@@ -9,11 +9,34 @@
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
+    
     <title>
-        {% block title %}{% endblock %}
+        Converge PongBoard
     </title>
 </head>
 <body>
+    <header>
+        <div class="navbar navbar-dark bg-dark shadow-sm">
+          <div class="container">
+                <div>
+                    <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
+                        <strong>{% block title %}{% endblock %}</strong>
+                    </a>
+                </div>
+                <div>
+                    <a class="btn btn btn-secondary" id="all-matches-link" href="{% url 'all_matches' %}">See all matches</a>
+                    {% if not user.is_authenticated %}
+                    <a class="btn btn-outline-light" id='login-link' href="{% url 'login' %}">Login</a>
+                    {% else %}
+                    <a class="btn btn-outline-light" id='logout-link' href="{% url 'logout' %}">Logout</a>
+                    {% endif %}
+                </div>
+                    
+          </div>
+        </div>
+    </header>
 {% block content %}{% endblock %}
 </body>
 </html>
